Fix project year overlapping title underline

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -418,7 +418,7 @@ img.smaller {
 				font-weight: normal;
 				letter-spacing: 0.1rem;
 				color: $midgrey;
-				margin-top: -0.5rem;
+				margin-top: 0.5rem;
 			}
 		}
 		.proj-tags {
